--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div>
             Do you want to see?
             <br>
-            <button onclick="enableSound()">Play</button>
+            <button>Play</button>
         </div>
     </div>
 
