--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
     <pre>        <h1 id="h1-content"><a id="h1-title">NotForokad</a>
 
 <img src="https://i.pinimg.com/enabled_lo/564x/51/ce/4a/51ce4a9dfbd365e1ecaa07dda5493a52.jpg" target="_blank" width="40%">
+<style>
+img {
+  border-radius: 50%;
+}
+</style>
 Instagram: <a href="https://www.instagram.com/space.man_0/" target="_blank">@space.man_0</a>
 Telegram: <a href="https://t.me/notforokad">@notforokad</a>
 Discord: <a href="https://discord.gg/hS2C5stumH">@notforokad</a>
